2000-12-07  Dancer Vesperman <dancer@users.sourceforge.net>
	* Give a useful diagnostic if pthread_create() fails in the timidity driver
	* Remove a redundant bit of output.
	* Kill most of the stutter from audio stream window startup.

2000-12-06  Jeff Freedman  <jeff@amy.nerble.net>

	* Changes to barges and Chunk_object_list::is_blocked to handle
	flying carpet better.
	* Fiddled with scroll rendering.

2000-12-06  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* menulist.cc: handle SDL_QUIT event in menus
	
2000-12-06  Jeff Freedman  <jeff@amy.nerble.net>

	* Restore mode after 'p' for 'lockpicking'.
	* If flags/properties change while gumps are open, repaint.

2000-12-06  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* Configuration.cc: don't abort when exult.cfg not found

2000-12-05  Max Horn  <max@quendi.de>
	* ucmachine.h: fixed delete -> delete []

2000-12-05  Tristan Tarrant <nadir@users.sourceforge.net>
	* audio/pcb.h: Fix possible race condition in produce()
	* audio/midi_drivers/Timidity_binary.*: use pthreads instead of SDL's
	  own, so that we can join properly. Reworked entire forking strategy.
	  This should fix most problems (all?)
	* game.cc: stop music at appropriate places

2000-12-05  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* cheat.cc: heal party also cures poison and removes hunger

2000-12-05  Tristan Tarrant <nadir@users.sourceforge.net>
	* INSTALL: more details
	* TODO: a few ideas

2000-12-04  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* exult.cc, cheat.h/cc: added ctrl-alt-h = resurrect and heal party.
	* various: changed lots of unsigned char* to uint*, added some std::toupper
	* Makefile.be: minor change
	* actors.cc: fixed blackrock-explosion bug

2000-12-03  Max Horn  <max@quendi.de>
	* various files: added missing using std::
	* xmlparse.cc: made handling of XML entities more efficient and support all 5 required XML entities
	* Text_gump.cc: fixed delete -> delete []
