@@ -851,6 +851,9 @@ void Game_window::read_ireg_objects
 			is_egg = obj->is_egg();
 			obj->set_low_lift (entry[4] & 0xF);
 			obj->set_high_shape (entry[3] >> 7);
+			if (!container && // Special case:  food.
+			    shnum == 377)
+				oflags &= ~(1<<Game_object::okay_to_take);
 			}
 		else if (entlen == 12)	// Container?
 			{
